manifests/jupyter/codeserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: ai
  labels:
    app: codeserver
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8443
      name: server
      targetPort: 8443
  selector:
    app: codeserver

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: codeserver
  namespace: ai
spec:
  serviceName: codeserver
  replicas: 1
  template:
    metadata:
      labels:
        app: codeserver
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
        - name: codeserver
          imagePullPolicy: IfNotPresent
          image: linuxserver/code-server:3.12.0
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              # GiB
              aliyun.com/gpu-mem: 1
          ports:
            - containerPort: 8443
              name: server
          volumeMounts:
          - name: config
            mountPath: /config
  selector:
    matchLabels:
      app: codeserver
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 100Gi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: codeserver.platform.aiscope.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: codeserver
            port:
              name: server
